// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Imported channel reducer handles actions handles setData 1`] = `
Immutable.Map {
  "name": "general",
  "keys": Immutable.Map {
    "ivk": "zxviews1qwk53xxqqgqqpqrdhg8mw8xdprc9gd6lfpddgyaz9x5575cxeyk53efx02n0swpa3rhxms8zxvj62z2and8thzfe3qyl3k7qgpk45glak450zsyn70tq5z367nj972mzkutdxaclwd59jnsq0w8q59aks6rju9s2vgu7y9qcleq76pluemthwknl44c2anzj4zj0fpqufh6fezcfl8lppvxmzee3fg53gfhwyd0y735gxuhwhxn6q5eyvncye9fcldwzpf7twzjrnwgk6eumj",
  },
  "address": "address123",
}
`;

exports[`Imported channel reducer handles actions handles setDecodingError 1`] = `[Error: this is a test error]`;

exports[`Imported channel reducer handles epics decodeChannel decodes uri 1`] = `
Immutable.Map {
  "name": "general",
  "keys": Immutable.Map {
    "ivk": "zxviews1qwk53xxqqgqqpqrdhg8mw8xdprc9gd6lfpddgyaz9x5575cxeyk53efx02n0swpa3rhxms8zxvj62z2and8thzfe3qyl3k7qgpk45glak450zsyn70tq5z367nj972mzkutdxaclwd59jnsq0w8q59aks6rju9s2vgu7y9qcleq76pluemthwknl44c2anzj4zj0fpqufh6fezcfl8lppvxmzee3fg53gfhwyd0y735gxuhwhxn6q5eyvncye9fcldwzpf7twzjrnwgk6eumj",
  },
  "address": "testaddress",
}
`;

exports[`Imported channel reducer handles epics decodeChannel sends notification on failure 1`] = `
Immutable.List [
  Immutable.Map {
    "options": Immutable.Map {
      "persist": false,
      "variant": "error",
      "action": [Function],
    },
    "message": "Invalid channel URI: Invalid channel hash: incorrect-uri",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel dispatches notification on failure 1`] = `
Immutable.List [
  Immutable.Map {
    "options": Immutable.Map {
      "variant": "error",
    },
    "message": "test error",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel dispatches notification on success 1`] = `
Immutable.List [
  Immutable.Map {
    "options": Immutable.Map {
      "variant": "success",
    },
    "message": "Successfully imported channel general",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel reloads channels 1`] = `
Immutable.List [
  Immutable.Map {
    "private": true,
    "name": "general",
    "onlyRegistered": false,
    "unread": 0,
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "advertFee": 0,
    "keys": Immutable.Map {
      "ivk": "zxviews1qwk53xxqqgqqpqrdhg8mw8xdprc9gd6lfpddgyaz9x5575cxeyk53efx02n0swpa3rhxms8zxvj62z2and8thzfe3qyl3k7qgpk45glak450zsyn70tq5z367nj972mzkutdxaclwd59jnsq0w8q59aks6rju9s2vgu7y9qcleq76pluemthwknl44c2anzj4zj0fpqufh6fezcfl8lppvxmzee3fg53gfhwyd0y735gxuhwhxn6q5eyvncye9fcldwzpf7twzjrnwgk6eumj",
    },
    "address": "testaddress",
    "showInfoMsg": true,
    "description": "",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel saves channel in vault 1`] = `
Array [
  Array [
    "this-is-a-test-identity-id",
    Object {
      "address": "testaddress",
      "keys": Object {
        "ivk": "zxviews1qwk53xxqqgqqpqrdhg8mw8xdprc9gd6lfpddgyaz9x5575cxeyk53efx02n0swpa3rhxms8zxvj62z2and8thzfe3qyl3k7qgpk45glak450zsyn70tq5z367nj972mzkutdxaclwd59jnsq0w8q59aks6rju9s2vgu7y9qcleq76pluemthwknl44c2anzj4zj0fpqufh6fezcfl8lppvxmzee3fg53gfhwyd0y735gxuhwhxn6q5eyvncye9fcldwzpf7twzjrnwgk6eumj",
      },
      "name": "general",
    },
  ],
]
`;

exports[`Imported channel reducer handles epics removeChannel calls remove channel 1`] = `
Array [
  Array [
    Object {
      "channelId": "test-address",
      "identityId": "this-is-a-test-identity-id",
    },
  ],
]
`;
